--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,99 @@
 ---
+import "@fontsource-variable/jost";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
+const descriptionPage =
+  "Evento de boxeo entre streamers y creadores de contenido, organizado por Ibai Llanos";
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="es, en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content={descriptionPage} />
+    <meta name="description" content="TODO" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="canonical" href="https://lavelada.es" />
+    <meta
+      name="keywords"
+      content="velada, streamers, creadores, Ibai, boxeo, midudev"
+    />
+    <title>{title}</title>
+  </head>
+  <body>
+    <div class="relative container mx-auto w-screen -z-10 overflow-x-clip">
+      <img
+        aria-hidden="true"
+        src="../../public/noise.svg"
+        class="absolute md:scale-125 lg:scale-100 lg:left-0 top-0 opacity-0 transform-gpu w-screen brightness-0 dark:brightness-200"
+        onload="this.classList.add('animate-fade-in', 'animate-duration-500')"
+        alt="Focos de luz"
+      />
+    </div>
+    <div class="max-w-6xl px-2 lg:px-10 pt-40 mx-auto">
+      <slot />
+    </div>
+  </body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  :root {
+    --color-primary: #333;
+    --color-secondary: #ddd;
+    --color-twitch: #6441a4;
+
+    --background-color: var(--color-secondary);
+    --background-image: var(--background-color) url("/concrete.png") repeat;
+  }
+
+  .dark {
+    --color-primary: #ddd;
+    --color-secondary: #333;
+    --color-twitch: #a270ff;
+
+    --background-image: var(--background-color) url("/concrete-dark.png") repeat;
+  }
+
+  html {
+    font-family: "Jost Variable", system-ui, sans-serif;
+    background: var(--background-image);
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    overscroll-behavior: none;
+  }
+
+  /* Hiding class, making content visible only to screen readers but not visually */
+  /* "sr" meaning "screen-reader" */
+  .sr-only:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: theme("colors.primary");
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: var(--background-image);
+  }
+
+  ::-webkit-scrollbar-corner {
+    background: var(--background-image);
+  }
 </style>
